--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>CARIOCAP2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/icon.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.png">
     <style>
         body{
           background-image: url("https://dmn-dallas-news-prod.cdn.arcpublishing.com/resizer/6VoquKXOUPir0M5ouTisgLjYA-A=/1660x0/smart/filters:no_upscale()/arc-anglerfish-arc2-prod-dmn.s3.amazonaws.com/public/OMHUU6ST3APZ2YFOOAQ37BWXE4.gif");
@@ -21,7 +21,7 @@
     <main class="cards">
         <section class="card contact">
             <div class="icon">
-                <img src="assets/Chat.png" alt="Contact us.">
+                <img src="icon.png" alt="Contact us.">
             </div>
             <h3>CARIOCAP2</h3>
             <span>Coder</span>
