--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="5427b3339fc0ab044e2e6abfc4f69cc6.png">
     <style>
         body{
           background-image: url("https://dmn-dallas-news-prod.cdn.arcpublishing.com/resizer/6VoquKXOUPir0M5ouTisgLjYA-A=/1660x0/smart/filters:no_upscale()/arc-anglerfish-arc2-prod-dmn.s3.amazonaws.com/public/OMHUU6ST3APZ2YFOOAQ37BWXE4.gif");
@@ -21,11 +21,11 @@
     <main class="cards">
         <section class="card contact">
             <div class="icon">
-                <img src="icon.png" alt="Contact us.">
+                <img src="5427b3339fc0ab044e2e6abfc4f69cc6.png" alt="Contact us.">
             </div>
             <h3>CARIOCAP2</h3>
             <span>Coder</span>
-            <button><a href="https://t.me/cariocap2"></a>Contato</button>
+            <button>Contato</button>
         </section>
     </main>
 </body>
