--- a/index.html
+++ b/index.html
@@ -1,38 +1,49 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+ <!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CARIOCAP2</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="5427b3339fc0ab044e2e6abfc4f69cc6.png">
-    <style>
-        body{
-          background-image: url("https://dmn-dallas-news-prod.cdn.arcpublishing.com/resizer/6VoquKXOUPir0M5ouTisgLjYA-A=/1660x0/smart/filters:no_upscale()/arc-anglerfish-arc2-prod-dmn.s3.amazonaws.com/public/OMHUU6ST3APZ2YFOOAQ37BWXE4.gif");
-          background-repeat: no-repeat;
-          background-size: cover;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>CARIOCAP2 | 777</title>
+  <!---Custom Css File!--->
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="5427b3339fc0ab044e2e6abfc4f69cc6.png">
+  <style>
+      body{
+        background-image: url("https://dmn-dallas-news-prod.cdn.arcpublishing.com/resizer/6VoquKXOUPir0M5ouTisgLjYA-A=/1660x0/smart/filters:no_upscale()/arc-anglerfish-arc2-prod-dmn.s3.amazonaws.com/public/OMHUU6ST3APZ2YFOOAQ37BWXE4.gif");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+  </style>
 </head>
 <body>
-    <main class="cards">
-        <section class="card contact">
-            <div class="icon">
-                <img src="5427b3339fc0ab044e2e6abfc4f69cc6.png" alt="Contact us.">
-            </div>
-            <h3>CARIOCAP2</h3>
-            <span>Coder</span>
-            <button>Contato</button>
-        </section>
-    </main>
+  <section class="main">
+  <div class="profile-card">
+    <div class="image">
+      <img src="5427b3339fc0ab044e2e6abfc4f69cc6.png" alt="" class="profile-pic">
+    </div>
+    <div class="data">
+      <h2>CARIOCAP2</h2>
+      <span>Programador & TI</span>
+    </div>
+    <div class="row">
+      <div class="info">
+        <h3>Projetos</h3>
+        <span>5</span>
+      </div>
+      <div class="info">
+        <h3>Nome</h3>
+        <span>Victor</span>
+      </div>
+      <div class="info">
+        <h3>Idade</h3>
+        <span>17</span>
+      </div>
+    </div>
+    <div class="buttons">
+      <a href="https://t.me/cariocap2" target="_blank" class="btn">Contato</a>
+    </div>
+  </div>
+</section>
 </body>
-
-<!--
-
-    @vt.vivaz
-
--->
 </html>
