--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>CARIOCAP2 | 777</title>
   <!---Custom Css File!--->
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
   <link rel="icon" href="5427b3339fc0ab044e2e6abfc4f69cc6.png">
   <style>
       body{
